<resources>
    <string name="app_name">HW 8.3</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
</resources>