<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingTop="14dp"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size" />
    </FrameLayout>
    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/loop"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black" />
    <Button
        android:id="@+id/media_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library"
        android:textAllCaps="false"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/media_library"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        />
    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textSize="@dimen/primary_text_size"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"
        />
</LinearLayout>